# tuisage

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  IMPLEMENTATION.md  LICENSE.md  PLAN.md  README.md  REQUIREMENTS.md  SPECIFICATION.md  mise.toml
.github/workflows/: cd.yml  release-plz.yml
demo/: demo.tape
fixtures/: sample.usage.kdl
src/: app.rs  command_builder.rs  main.rs  theme.rs  ui.rs  widgets.rs
src/components/: arg_panel.rs  choice_select.rs  command_panel.rs  execution.rs  filterable.rs  flag_panel.rs  help_bar.rs  list_panel_base.rs  mod.rs  preview.rs  select_list.rs  theme_picker.rs
src/snapshots/: tuisage__ui__tests__snapshot_catppuccin_mocha_theme.snap  tuisage__ui__tests__snapshot_choice_select_filtered.snap  tuisage__ui__tests__snapshot_choice_select_open.snap  tuisage__ui__tests__snapshot_choice_select_with_descriptions.snap  tuisage__ui__tests__snapshot_choices_flag.snap  tuisage__ui__tests__snapshot_commands_scrollbar.snap  tuisage__ui__tests__snapshot_config_subcommands.snap  tuisage__ui__tests__snapshot_count_flag_incremented.snap  tuisage__ui__tests__snapshot_deep_navigation.snap  tuisage__ui__tests__snapshot_deploy_leaf.snap  tuisage__ui__tests__snapshot_editing_arg.snap  tuisage__ui__tests__snapshot_filter_active.snap  tuisage__ui__tests__snapshot_flag_filter_active.snap  tuisage__ui__tests__snapshot_flag_filter_selected_item.snap  tuisage__ui__tests__snapshot_flag_filter_verbose.snap  tuisage__ui__tests__snapshot_flags_toggled.snap  tuisage__ui__tests__snapshot_gruvbox_dark_theme.snap  tuisage__ui__tests__snapshot_no_subcommands.snap  tuisage__ui__tests__snapshot_nord_theme.snap  tuisage__ui__tests__snapshot_preview_focused.snap  tuisage__ui__tests__snapshot_root_view.snap  tuisage__ui__tests__snapshot_run_command.snap  (+5 more)
