[package]
name = "tuisage"
version = "0.1.2"
edition = "2021"
description = "TUI application for interacting with CLI commands defined by usage specs"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mgood/tuisage"
repository = "https://github.com/mgood/tuisage"

[[bin]]
name = "tuisage"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_usage = "2.0"
color-eyre = "0.6"
crossterm = { version = "0.29", features = ["event-stream"] }
nucleo-matcher = "0.3"
portable-pty = "0.9"
ratatui = "0.30"
ratatui-interact = "0.4"
ratatui-themes = "0.1"
tui-term = "0.3"
usage-lib = { version = "2.16", default-features = false }
vt100 = "0.16"

[dev-dependencies]
insta = "1"
pretty_assertions = "1"
